--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -11,3 +11,6 @@ Roxygen: list(markdown = TRUE)
 RoxygenNote: 7.3.2
 URL: https://github.com/sharrington92/dunkdb
 BugReports: https://github.com/sharrington92/dunkdb/issues
+Imports: 
+    DBI,
+    duckdb
