--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -12,4 +12,8 @@ URL: https://github.com/sharrington92/dunkdb
 BugReports: https://github.com/sharrington92/dunkdb/issues
 Imports: 
     DBI,
-    duckdb
+    dplyr,
+    duckdb,
+    httr2,
+    rvest,
+    stringr
