--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -11,6 +11,7 @@ RoxygenNote: 7.3.2
 URL: https://github.com/sharrington92/dunkdb
 BugReports: https://github.com/sharrington92/dunkdb/issues
 Imports: 
+    crayon,
     DBI,
     dplyr,
     duckdb,
